--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+#root {
+  overflow: hidden;
+}
 body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
